Bug 458361 - Sharpness brushes are functionally inaccurate when "Align the brush preview outline to the pixel grid" is disabled
Summary: Sharpness brushes are functionally inaccurate when "Align the brush preview o...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.1.0
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-08-27 00:35 UTC by tomtomtomreportingin
Modified: 2022-09-16 13:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2022-08-27 00:35:58 UTC
SUMMARY
When "Align the brush preview outline to the pixel grid" is disabled (as it is by default), the brush doesn't perform the way it did pre-5.1. This difference in behavior can be observed in the brush settings preview when toggling the option.

Please note that this bug did NOT occur in the demo I recorded in https://invent.kde.org/graphics/krita/-/merge_requests/1405 (as you can tell from the brush settings preview not changing), so it seems the behavior regressed in some way sometime after my initial merge request. Perhaps the additional commits might have introduced new problems.

STEPS TO REPRODUCE
1. Select Pixel Art Fill brush.
2. Select Sharpness option.
3. Enable "Align the brush preview outline to the pixel grid"

OBSERVED RESULT
The functional behavior of the brush changes. Disabling the setting makes it so that brush doesn't make strokes the same way it did pre-5.1.

EXPECTED RESULT
The setting should only affect the brush preview outline. 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.12.12 (appimage)
Comment 1 tomtomtomreportingin 2022-08-27 00:43:29 UTC
Since this issue changes how sharpness brushes create strokes between 5.0 and 5.1, without any user intervention, marking this as a regression.
Comment 3 Bug Janitor Service 2022-09-09 06:27:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1582
Comment 4 Dmitry Kazakov 2022-09-15 08:25:22 UTC
Git commit cca625b7a09e5e4226ec1283d27cdf725dc29e9b by Dmitry Kazakov, on behalf of Tom Tom Tom.
Committed on 15/09/2022 at 08:24.
Pushed by dkazakov into branch 'master'.

Fix dab inaccuracy of Sharpness brushes when outline preview snapping is disabled

M  +1    -1    plugins/paintops/libpaintop/kis_current_outline_fetcher.cpp
M  +6    -5    plugins/paintops/libpaintop/kis_pressure_sharpness_option.cpp

https://invent.kde.org/graphics/krita/commit/cca625b7a09e5e4226ec1283d27cdf725dc29e9b
Comment 5 Dmitry Kazakov 2022-09-15 08:25:54 UTC
Git commit dd48fb72fb289519917be6c79247f78a8ff38a46 by Dmitry Kazakov, on behalf of Tom Tom Tom.
Committed on 15/09/2022 at 08:25.
Pushed by dkazakov into branch 'krita/5.1'.

Fix dab inaccuracy of Sharpness brushes when outline preview snapping is disabled


(cherry picked from commit cca625b7a09e5e4226ec1283d27cdf725dc29e9b)

M  +1    -1    plugins/paintops/libpaintop/kis_current_outline_fetcher.cpp
M  +6    -5    plugins/paintops/libpaintop/kis_pressure_sharpness_option.cpp

https://invent.kde.org/graphics/krita/commit/dd48fb72fb289519917be6c79247f78a8ff38a46