Fix dab inaccuracy of Sharpness brushes when outline preview snapping is disabled

BUG:458361